# cb-trade-data-service

./: .env.ci.template  .flake8  .gitignore  README.md  __init__.py  cleanup_azure_test_folders.py  debug_config.py  docker-compose.yml  dummy.txt  environment.yml  fedcred.json  pyproject.toml  pytest.ini  setup.py  test_azure_cleanup.py  test_azure_fix.py  test_cleanup.py
.github/: copilot-instructions.md
.github/docs/: exchangesource.md  folder.txt  iteration1.md  phase1.md  phase1_iteration_plan.md  refactoring_plan.md  storage.md  strorage.md
.github/workflows/: development-ci.yml
data-service/: setup.py
data-service/tests/: test_path_utility.py
docs/: azure-auth-setup.md
examples/: azure_auth_example.py
src/: __init__.py  config.py
src/collection/: interfaces.py  manager.py  processor.py
src/data_source/: microkernel.py
src/exchange_data_service/: ccxt_exchange_data_service.py  exchange_data_service.py  interface.py
src/exchange_source/: config.py  interfaces.py  microkernel.py  models.py
src/historical/: current_fetcher.py  data_service.py  fetcher.py  historical.md  interfaces.py  manager.py
src/secrets/: interfaces.py  providers.py
src/storage/: backend_factory.py  config.py  interfaces.py  paging.py  partition_strategy.py  path_strategy.py  path_utility.py  storage_manager.py  storage_settings.py  strategy_factory.py
src/target_management/: manager.py
system/integration_test_targets_delta/: part-00001-02c7c008-6b4b-46cc-a15e-9042404f56ab-c000.snappy.parquet  (+1 more)
tests/: conftest.py
tests/helpers/: model_helpers.py  (+1 more)
(+60 files in other folders)
